--- a/DigitalPortfolio/css/styles.css
+++ b/DigitalPortfolio/css/styles.css
@@ -689,6 +689,10 @@ a.button {
 /* Work
 **/
 
+.work-title {
+
+}
+
 #image-track {
     display: flex;
     gap: 15vmin;
@@ -725,11 +729,33 @@ a.button {
     pointer-events: all;
 }
 
-.page > h2 > span {
+.work-title {
     position: absolute;
-    top: 10%;
+    top: 5%;
     left: 50%;
     transform: translate(-50%, 0%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    user-select: none;
+}
+
+.work-title h3 {
+    font-family: "Poppins", sans-serif;
+    font-size: 0.8rem;
+    color: var(--accent-lighter);
+    text-transform: uppercase;
+    margin-top: 0.5rem;
+    margin-bottom: 0;
+}
+
+.work-title svg{
+    width: 10rem;
+    margin: 0;
+    color: var(--accent-lighter);
+}
+
+.page h2 > span {
     font-family: "Dancing Script", sans-serif;
     font-weight: bold;
     font-size: 7rem;
@@ -742,7 +768,6 @@ a.button {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     white-space: nowrap;
-    user-select: none;
     -webkit-user-drag: none;
 
     animation: titleFlyRight 500ms backwards 1, background-pan 5s linear infinite;
